appId: com.lms.app.dev
name: TC-21 Create account with registered email
tags: [auth, create-account, regression]
---
- runFlow: ../../components/launch-login.yaml
- runFlow: ../../components/open-create-account.yaml
- runFlow:
    file: ../../components/fill-create-account.yaml
    env:
      FIRST_NAME: "Rajib"
      LAST_NAME: "Khan"
      EMAIL: "${USER1_EMAIL}"
      PASSWORD: "Rajib@12"
      CONFIRM_PASSWORD: "Rajib@12"
- scrollUntilVisible:
    element:
      text: "Create Account"
      enabled: true
    direction: DOWN
- tapOn:
    text: "Create Account"
    enabled: true
- assertVisible: "This email address is already registered. Please "
- tapOn: "Login to your account"
- assertVisible: "Welcome Back"
