appId: com.lms.app.dev
name: TC-06 Reset password link routing
tags: [auth, regression]
---
- runFlow: ../../components/launch-login.yaml
- runFlow:
    file: ../../components/submit-login.yaml
    env:
      EMAIL: "${USER1_EMAIL}"
      PASSWORD: "12345"
- assertVisible: "Incorrect password"
- assertVisible: "The password you entered is incorrect. Please try again or "
- tapOn: "Reset your password"
- assertVisible: "Forgot Password"
- assertVisible: "Enter the email that you used when you signed up to recover your password. You will receive a password reset link"
- assertVisible: "${USER1_EMAIL}"
