appId: com.lms.app.dev
name: TC-09 Show login password
tags: [auth, login, regression]
---
- runFlow: ../../components/launch-login.yaml
- tapOn: "Password"
- inputText:
    text: "Test@123"
    label: Enter password
- hideKeyboard
- assertVisible: "\\*\\*\\*\\*\\*\\*\\*\\*"
- tapOn:
    id: "password_visibility_toggle"
- assertVisible: "Test@123"
- assertNotVisible: "\\*\\*\\*\\*\\*\\*\\*\\*"
