appId: com.lms.app.dev
name: TC-10 Hide login password
tags: [auth, login, regression]
---
- runFlow: ../../components/launch-login.yaml
- tapOn: "Password"
- inputText:
    text: "Test@123"
    label: Enter password
- hideKeyboard
- tapOn:
    id: "password_visibility_toggle"
- assertVisible: "Test@123"
- tapOn:
    id: "password_visibility_toggle"
- assertVisible: "\\*\\*\\*\\*\\*\\*\\*\\*"
- assertNotVisible: "Test@123"
