appId: com.lms.app.dev
---
- tapOn: "First Name"
- inputText:
    text: "${FIRST_NAME}"
    label: Enter first name
- tapOn: "Last Name"
- inputText:
    text: "${LAST_NAME}"
    label: Enter last name
- tapOn: "name@gmail.com"
- inputText:
    text: "${EMAIL}"
    label: Enter registration email
- tapOn:
    text: "Password"
    index: 0
- inputText:
    text: "${PASSWORD}"
    label: Enter password
- scrollUntilVisible:
    element:
      text: "Re-type Password \\*"
    direction: DOWN
- tapOn: "Password"
- inputText:
    text: "${CONFIRM_PASSWORD}"
    label: Enter password confirmation
