appId: com.lms.app.dev
---
- tapOn:
    text: "Forgot Password\\?\\nForgot Password\\?"
    retryTapIfNoChange: true
- extendedWaitUntil:
    visible: "Forgot Password"
    timeout: 10000
- assertVisible: "Enter the email that you used when you signed up to recover your password. You will receive a password reset link"
