appId: com.lms.app.dev
---
- tapOn: "Enter your email"
- inputText:
    text: "${EMAIL}"
    label: Enter recovery email
- tapOn: "Send Link"
