appId: com.lms.app.dev
---
- tapOn: "name@gmail.com"
- inputText:
    text: "${EMAIL}"
    label: Enter email
- tapOn: "Password"
- inputText:
    text: "${PASSWORD}"
    label: Enter password
- hideKeyboard
- tapOn: "Login"
