appId: com.lms.app.dev
name: TC-53 Update gender
tags: [profile, edit-profile, regression]
---
- runFlow: components/open-edit-profile.yaml
- runFlow: components/scroll-to-profile-bottom.yaml
- tapOn: "Male"
- assertVisible: "Select Gender"
- tapOn: "Female"
- assertVisible: "Female"
